# omega-zsh-python

./: .coverage  .coveragerc  .gitignore  .gitingestignore  CONTRIBUTING.md  GEMINI.md  MANIFEST.in  PROGRESS.md  README.md  TODO.md  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Figlet_Fonts/: figlet_gallery.py  figlet_tui.py
assets/templates/: .zshrc.j2  personal.zsh.j2
assets/themes/: bira_espacial.zsh-theme  bira_minimalista_oscuro.zsh-theme  everforest_friendly.zsh-theme  example.zsh-theme  gruvbox_block.zsh-theme  rose_pine_block.zsh-theme
docs/: config-files.md
omega_zsh/: __main__.py
omega_zsh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
omega_zsh/assets/: plugins.json
omega_zsh/assets/templates/: _core.j2  (+6 more)
omega_zsh/cli/: oz_tool.py
omega_zsh/core/: apply.py  backup.py  bootstrap.py  constants.py  context.py  doctor.py  figlet.py  generator.py  installer.py  manifest.py  operations.py  plugins_db.py  recovery.py  shell.py  state.py  system_info.py
omega_zsh/ui/: app.py  screens.py
scripts/: uninstall.sh
src/cli/: oz_tool.py
src/core/: constants.py  figlet.py  generator.py  installer.py  state.py
src/ui/: app.py  screens.py
tests/: conftest.py  test_apply.py  test_catalog.py  test_context.py  test_coverage_gap.py  test_doctor.py  test_figlet.py  test_generator.py  test_install_script.py  test_installer.py  test_main.py  test_oz.py  test_platforms.py  test_recovery.py  test_state.py  test_ui_app.py  test_ui_apply.py  test_ui_header_preview.py  test_ui_nav.py  test_ui_preview.py  test_ui_problems.py  test_ui_recovery.py  test_ui_theme_id_sanitization.py
tools/hooks/: pre-push
(+18 files in other folders)
