[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-zsh"
version = "2.2.0"
description = "The Ultimate Shell Manager for Linux & Android (Termux)"
readme = "README.md"
authors = [{ name = "SnakePilot10" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.2.0",
    "textual>=6.12.0",
    "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.9.0"
]

[project.scripts]
omega = "omega_zsh.__main__:main"
oz = "omega_zsh.cli.oz_tool:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omega_zsh*"]

[tool.setuptools.package-data]
omega_zsh = ["assets/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["T201"] # Permite prints para debugging y feedback CLI
